# NullSection

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/core/: nt_api.hpp  object_manager.hpp  syscalls.hpp
include/evasion/: telemetry.hpp
include/image/: image_mapper.hpp  pe_parser.hpp  section_builder.hpp
include/process/: peb_builder.hpp  process_factory.hpp  thread_launcher.hpp
include/utils/: exceptions.hpp  handle.hpp  logging.hpp  ntstatus.hpp
src/cli/: main.cpp
src/core/: nt_api.cpp  object_manager.cpp  syscall_stub.asm  syscalls.cpp
src/evasion/: telemetry.cpp
src/image/: image_mapper.cpp  pe_parser.cpp  section_builder.cpp
src/process/: peb_builder.cpp  process_factory.cpp  thread_launcher.cpp
src/utils/: logging.cpp  ntstatus.cpp
